--- a/app/views/leagues/show.html.erb
+++ b/app/views/leagues/show.html.erb
@@ -1,1 +1,11 @@
 <h1>League Homepage for <%= @league.league_name %></h1>
+<div class="memberList">
+  League Members
+  <ul>
+  <% @members.each do |member|%>
+<li>  <%= member.username %> </li>
+<% end %>
+</ul>
+</div>
+
+<%= link_to "Join this league",  %>
