added functionality to join a league, also test for said functionality.

--- a/app/views/leagues/show.html.erb
+++ b/app/views/leagues/show.html.erb
@@ -7,5 +7,6 @@
 <% end %>
 </ul>
 </div>
-
-<%= link_to "Join this league",  %>
+<% if !@members.find_by_id(current_user.id) %>
+<%= link_to "Join this league", league_memberships_path(@league), method: :post  %>
+<% end %>
