--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,3 +21,27 @@
   border-width: 1px;
   width: 20em
 }
+
+.matchups {
+  border-style: solid;
+  border-width: 1px;
+}
+
+.gameTile {
+  text-align: center;
+  border-style:  solid ;
+  border-color: black;
+  width: 50%;
+  margin-left:  auto;
+  margin-right: auto;
+  margin-top: 10px;
+
+}
+
+.awayTeam {
+  margin-bottom: 2px;
+}
+
+.homeTeam {
+  margin-top: 2px;
+}
