User can now select a winner and assign confidence score.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -45,3 +45,13 @@
 .homeTeam {
   margin-top: 2px;
 }
+
+.awayTeamwinner {
+    margin-bottom: 2px;
+  background-color: blue;
+}
+
+.homeTeamwinner {
+  margin-top: 2px;
+  background-color: green;
+}
