--- a/app/views/leagues/new.html.erb
+++ b/app/views/leagues/new.html.erb
@@ -11,7 +11,7 @@
     </div>
   <% end %>
 
-  <div className="newLeague">
+  <div class="newLeague">
     <p class="field">
       <%= f.label :league_name %>
       <%= f.text_area :league_name %>
