picks being passed down correctly.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -96,6 +96,8 @@ h3 {
   text-align: center;
 }
 .userPicks {
+  width: 75%;
+  margin: auto;
   border-style: solid;
   border-color: black;
   border-width: thick;
