--- a/app/views/leagues/index.html.erb
+++ b/app/views/leagues/index.html.erb
@@ -1,8 +1,8 @@
 <h2 class="welcomeHeader">Leagues Home Page</h2>
-<div class="grid-container">
-  <div class="grid-x grid-margin-x">
+<div class="leagueList">
+  <div class="columns small-6">
 <% @open_leagues.each do |league| %>
-<div class="cell small-4"><%= link_to league.league_name, league_path(league) %></div>
+<div class="leagueJoin"><%= link_to league.league_name, league_path(league) %></div>
 <% end %>
 </div>
 </div>
