--- a/app/views/leagues/show.html.erb
+++ b/app/views/leagues/show.html.erb
@@ -13,37 +13,34 @@
 
   <% if !@members.find_by_id(current_user.id) %>
     <%= link_to "Join this league", league_memberships_path(@league), method: :post  %>
-  <% else %>
-    <h3> <%= link_to "Click here to pick the games!",league_picks_path(@league.id) %> </h3>
   <% end %>
   <% if @games %>
     <% if @picks.length ==0  %>
+    <h3> <%= link_to "Click here to pick the games!",league_picks_path(@league.id) %> </h3>
       <h2 class="gameHead">Games for Week <%= @current_week.week_number %></h2>
-      <div class="leagueGameList">
-        <ul class="leagueGame">
+      <div class=" row leagueGameList">
           <% @games.each do |game| %>
-          <li class="matchup">
-            <span >
-              <%= game.away_team.location %> <%=game.away_team.team_name%>
-              at
-              <%= game.home_team.location %> <%= game.home_team.team_name %>
-            </span>
-          </li>
+          <% away =Team.find_by_id(game.away_team_id).team_name  %>
+          <% home =Team.find_by_id(game.home_team_id).team_name  %>
+            <div class="small-6 medium-4 large-3 columns" id=<%="#{away}" %>>@</div>
+            <div class="small-6 medium-4 large-3 columns" id=<%="#{home}"%>></div>
+
           <% end %>
-        </ul>
       </div>
+
     <% else %>
-  <h2 class="gameHead">Your picks for the week </h2>
-  <div class="userPicks">
+    <h2 class="gameHead">Your picks for the week </h2>
+    <h3><%= link_to "Edit your picks here",  league_picks_path(@league.id) %></h3>
+    <div class="row">
     <% @picks.each do |pick| %>
-    <p class="gamePick">
+    <% name =Team.find_by_id(pick[:winning_team]).team_name%>
+    <div class="small-6 medium-4 large-3 columns gamePick" id=<%="#{name}"%>>
       <%=Team.find_by_id(pick[:winning_team]).location%>
       <%=Team.find_by_id(pick[:winning_team]).team_name%>
       <%=pick[:confidence]%>
-    </p>
+    </div>
     <% end %>
   </div>
-  <%= link_to "Edit your picks here",  league_picks_path(@league.id) %>
   <% end %>
   <% else %>
   <p> No Games Scheduled </p>
