--- a/app/assets/stylesheets/teams.scss
+++ b/app/assets/stylesheets/teams.scss
@@ -1,5 +1,5 @@
-#49ers{
-  background: image-url("49ers.gif");
+#Niners{
+  background: image-url("Niners.gif");
   background-size: cover
 }
 #Bears{
