--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,9 +5,9 @@
   <span class="privateLink"> <%= link_to "Click here to create a custom league!", new_league_path  %> </span>
 </div>
     <% @memberships.each do |membership| %>
-    <div class="columns small-3 leagueLink">
-    <span class="columns small-6"> <%=link_to "#{ membership.league.league_name}", league_path(membership.league)%></span>
-      <span class="columns small-3 weeklyScore"><%="Score for week #{Week.current_week.week_number}: "%>
+    <div class="row small-6 small-offset-3 medium-8 medium-offset-2 large-10 columns large-offset-2 leagueLink">
+    <span class="columns small-6 medium-6 large-6"> <%=link_to "#{ membership.league.league_name}", league_path(membership.league)%></span>
+      <span class="columns small-3  weeklyScore"><%="Score for week #{Week.current_week.week_number}: "%>
       <%= Membership.weekly_score(membership.user_id, membership.league_id,Week.current_week) %></span>
        <span class="columns small-3 yearToDateScore"><%= "Score for #{Week.current_week.year}: #{membership.score}" %></span>
     </div>
