--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -1295,18 +1295,18 @@ $include-html-global-classes: $include-html-classes;
 // $include-html-table-classes: $include-html-classes;
 
 // These control the background color for the table and even rows
-// $table-bg: $white;
-// $table-even-row-bg: $snow;
+$table-bg: black;
+$table-even-row-bg: black;
 
 // These control the table cell border style
-// $table-border-style: solid;
-// $table-border-size: 1px;
-// $table-border-color: $gainsboro;
+$table-border-style: double;
+$table-border-size: 5px;
+$table-border-color: #396F2A;
 
 // These control the table head styles
-// $table-head-bg: $white-smoke;
+$table-head-bg: black;
 // $table-head-font-size: rem-calc(14);
-// $table-head-font-color: $jet;
+$table-head-font-color: #396F2A;
 // $table-head-font-weight: $font-weight-bold;
 // $table-head-padding: rem-calc(8 10 10);
 
@@ -1326,7 +1326,7 @@ $include-html-global-classes: $include-html-classes;
 // These control the row padding and font styles
 // $table-row-padding: rem-calc(9 10);
 // $table-row-font-size: rem-calc(14);
-// $table-row-font-color: $jet;
+$table-row-font-color: #396F2A;
 // $table-line-height: rem-calc(18);
 
 // These are for controlling the layout, display and margin of tables
