--- a/app/assets/stylesheets/teams.scss
+++ b/app/assets/stylesheets/teams.scss
@@ -1,193 +1,193 @@
 #Niners{
   background: image-url("Niners.gif");
-  background-size:contain;
-  background-position: center;
+  background-size: 75%;
+  background-position: top;
   background-repeat: no-repeat;
 }
 #Bears {
   background: image-url("Bears.gif");
-  background-size: contain;
-  background-position: center;
+  background-size: 75%;
+  background-position: top;
   background-repeat: no-repeat;
 
 }
 #Bengals{
   background: image-url("Bengals.gif");
-  background-size: contain;
-  background-position: center;
+  background-size: 75%;
+  background-position: top;
   background-repeat: no-repeat;
 }
 #Bills{
   background: image-url("Bills.gif");
-  background-size: contain;
-  background-position: center;
+  background-size: 75%;
+  background-position: top;
   background-repeat: no-repeat;
 }
 #Broncos{
   background: image-url("Broncos.gif");
-  background-size: contain;
-  background-position: center;
+  background-size: 75%;
+  background-position: top;
   background-repeat: no-repeat;
 }
 #Browns{
   background: image-url("Browns.gif");
-  background-size: contain;
-  background-position: center;
+  background-size: 75%;
+  background-position: top;
   background-repeat: no-repeat;
 }
 #Buccaneers{
   background: image-url("Buccaneers.gif");
-  background-size: contain;
-  background-position: center;
+  background-size: 75%;
+  background-position: top;
   background-repeat: no-repeat;
 }
 #Cardinals{
   background: image-url("Cardinals.gif");
-  background-size: contain;
-  background-position: center;
+  background-size: 75%;
+  background-position: top;
   background-repeat: no-repeat;
 }
 #Chargers{
   background: image-url("Chargers.gif");
-  background-size: contain;
-  background-position: center;
+  background-size: 75%;
+  background-position: top;
   background-repeat: no-repeat;
 }
 #Chiefs{
   background: image-url("Chiefs.gif");
-  background-size: contain;
-  background-position: center;
+  background-size: 75%;
+  background-position: top;
   background-repeat: no-repeat;
 }
 #Colts{
   background: image-url("Colts.gif");
-  background-size: contain;
-  background-position: center;
+  background-position:top;
   background-repeat: no-repeat;
+  background-size: 75%;
 }
 #Cowboys{
   background: image-url("Cowboys.gif");
-  background-size: contain;
-  background-position: center;
+  background-size: 75%;
+  background-position: top;
   background-repeat: no-repeat;
 }
 #Dolphins{
   background: image-url("Dolphins.gif");
-  background-size: contain;
-  background-position: center;
+  background-size: 75%;
+  background-position: top;
   background-repeat: no-repeat;
 }
 #Eagles{
   background: image-url("Eagles.gif");
-  background-size: contain;
-  background-position: center;
+  background-size: 75%;
+  background-position: top;
   background-repeat: no-repeat;
 }
 #Falcons{
   background: image-url("Falcons.gif");
-  background-size: contain;
-  background-position: center;
+  background-size: 75%;
+  background-position: top;
   background-repeat: no-repeat;
 }
 #Giants{
   background: image-url("Giants.gif");
-  background-size: contain;
-  background-position: center;
+  background-size: 75%;
+  background-position: top;
   background-repeat: no-repeat;
 }
 #Jaguars{
   background: image-url("Jaguars.gif");
-  background-size: contain;
-  background-position: center;
+  background-size: 75%;
+  background-position: top;
   background-repeat: no-repeat;
 }
 #Jets{
   background: image-url("Jets.gif");
-  background-size: contain;
-  background-position: center;
+  background-size: 75%;
+  background-position: top;
   background-repeat: no-repeat;
 }
 #Lions{
   background: image-url("Lions.gif");
-  background-size: contain;
-  background-position: center;
+  background-size: 75%;
+  background-position: top;
   background-repeat: no-repeat;
 }
 #Packers{
   background: image-url("Packers.gif");
-  background-size: contain;
-  background-position: center;
+  background-size: 75%;
+  background-position: top;
   background-repeat: no-repeat;
 }
 #Panthers{
   background: image-url("Panthers.gif");
-  background-size: contain;
-  background-position: center;
+  background-size: 75%;
+  background-position: top;
   background-repeat: no-repeat;
 }
 #Patriots{
   background: image-url("Patriots.gif");
-  background-size: contain;
-  background-position: center;
+  background-size: 75%;
+  background-position: top;
   background-repeat: no-repeat;
 }
 #Raiders{
   background: image-url("Raiders.gif");
-  background-size: contain;
-  background-position: center;
+  background-size: 75%;
+  background-position: top;
   background-repeat: no-repeat;
 }
 #Rams{
   background: image-url("Rams.gif");
-  background-size: contain;
-  background-position: center;
+  background-size: 75%;
+  background-position: top;
   background-repeat: no-repeat;
 }
 #Ravens{
   background: image-url("Ravens.gif");
-  background-size: contain;
-  background-position: center;
+  background-size: 75%;
+  background-position: top;
   background-repeat: no-repeat;
 }
 #Redskins{
   background: image-url("Redskins.gif");
-  background-size: contain;
-  background-position: center;
+  background-size: 75%;
+  background-position: top;
   background-repeat: no-repeat;
 }
 #Saints{
   background: image-url("Saints.gif");
-  background-size: contain;
-  background-position: center;
+  background-size: 75%;
+  background-position: top;
   background-repeat: no-repeat;
 }
 #Seahawks{
   background: image-url("Seahawks.gif");
-  background-size: contain;
-  background-position: center;
+  background-size: 75%;
+  background-position: top;
   background-repeat: no-repeat;
 }
 #Steelers{
   background: image-url("Steelers.gif");
-  background-size: contain;
-  background-position: center;
+  background-size: 75%;
+  background-position: top;
   background-repeat: no-repeat;
 }
 #Texans{
   background: image-url("Texans.gif");
-  background-size: contain;
-  background-position: center;
+  background-size: 75%;
+  background-position: top;
   background-repeat: no-repeat;
 }
 #Titans{
   background: image-url("Titans.gif");
-  background-size: contain;
-  background-position: center;
+  background-size: 75%;
+  background-position: top;
   background-repeat: no-repeat;
 }
 #Vikings{
   background: image-url("Vikings.gif");
-  background-size: contain;
-  background-position: center;
+  background-size: 75%;
+  background-position: top;
   background-repeat: no-repeat;
 }
