--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -20,16 +20,6 @@
   font-size: 16px;
 }
 
-.publicLink {
-  padding-right: 10px;
-}
-
-.privateLink {
-  padding-left: 10px;
-  text-align: right;
-}
-
-
 
 .weeklyScore {
   font-style: italic;
@@ -39,4 +29,9 @@
 .yearToDateScore {
   font-weight: bold;
   font-size: 18px;
+}
+
+.introBlub {
+  font-size: 1.5em;
+  font-weight: bold;
 }
