--- a/app/views/leagues/show.html.erb
+++ b/app/views/leagues/show.html.erb
@@ -1,14 +1,23 @@
 <h2 class="welcomeHeader">League Homepage for <%= @league.league_name %></h1>
-  <div class="memberList">
-    League Standings:
-    <ol>
-      <% @scores.each do |score|%>
-      <li>
-        <%=score[:username]%> | Season Score:
-        <%=score[:score_season]%>
-      </li>
-      <% end %>
-    </ol>
+  <div class="leaderBoard">
+    <table role="grid" class="row">
+      <thead class="row">
+      <th class="small-1 medium-1 large-1 columns rank">Rank</th>
+      <th class="small-4 medium-4 large-4 columns user">Username</th>
+      <th class="small-3 medium-3 large-3 columns weeklyScore">Weekly Score</th>
+      <th class="small-4 medium-4 large-4 columns">Season Score</th>
+    </thead>
+      <tbody>
+      <% @scores.each_with_index do |score, index|%>
+      <tr>
+        <td class="small-1 medium-1 large-1 columns rank"><%= index+1 %></td>
+        <td class="small-4 medium-4 large-4 columns user"><%=score[:username]%></td>
+        <td class="small-3 medium-3 large-3 columns weeklyScore"><%=score[:score_season]%></td>
+        <td class="small-4 medium-4 large-4 columns"><%= score[:score_week] %></td>
+      </tr>
+      <%end%>
+    </tbody>
+    </table>
   </div>
 
   <% if !@members.find_by_id(current_user.id) %>
@@ -23,9 +32,9 @@
           <% away =Team.find_by_id(game.away_team_id).team_name  %>
           <% home =Team.find_by_id(game.home_team_id).team_name  %>
           <% if away == "49ers" %>
-          <% away = "Niners" %>
+            <% away = "Niners" %>
           <% end %>
-          <% if home == "49ers" %>
+            <% if home == "49ers" %>
           <% home = "Niners" %>
           <% end %>
             <div class="small-6 medium-4 large-3 columns game end">
@@ -35,22 +44,29 @@
       </div>
 
     <% else %>
+    <div>
     <h2 class="gameHead">Your picks for the week </h2>
     <h3><%= link_to "Edit your picks here",  league_picks_path(@league.id) %></h3>
     <div class="row">
-    <% @picks.each do |pick| %>
-    <% name =Team.find_by_id(pick[:winning_team]).team_name%>
-    <% if name == "49ers" %>
-    <% name = "Niners" %>
-    <% end %>
-    <div class="small-6 medium-4 large-3 columns gamePick" id=<%="#{name}"%>>
-      <%=Team.find_by_id(pick[:winning_team]).location%>
-      <%=Team.find_by_id(pick[:winning_team]).team_name%>
-      <%=pick[:confidence]%>
+      <% @picks.each do |pick| %>
+        <% name =Team.find_by_id(pick[:winning_team]).team_name%>
+          <% if name == "49ers" %>
+            <% name = "Niners" %>
+          <% end %>
+        <div class="small-6 medium-4 large-3 columns gamePick" id=<%="#{name}"%>>
+          <span>
+            <%=Team.find_by_id(pick[:winning_team]).location%>
+            <%=Team.find_by_id(pick[:winning_team]).team_name%>
+            <%=pick[:confidence]%>
+          </span>
+        </div>
+      <% end %>
+    </div>
     </div>
     <% end %>
-  </div>
-  <% end %>
+
   <% else %>
-  <p> No Games Scheduled </p>
+  <div>
+    <p> No Games Scheduled </p>
+  </div>
   <% end %>
