--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>ConfidencePool</title>
+  <title>NFL Confidence Pool</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <%= stylesheet_link_tag 'application', media: 'all' %>
 
@@ -14,17 +14,11 @@
   <nav class="top-bar">
     <ul class="title-area">
       <li class="name">
-        <h1><a href="/">ConfidencePool</a></h1>
+        <h1><a href="/">NFL Confidence Pool Home</a></h1>
       </li>
     </ul>
 
-    <section class="top-bar-section">
-      <ul class="title-area left">
-        <% if current_user %>
-        <li><h1>Welcome <%= current_user.first_name %><h1> </li>
-        <% end %>
-      </ul>
-    </section>
+
 
     <section class="top-bar-section">
       <ul class="right">
