--- a/app/assets/stylesheets/leagues.scss
+++ b/app/assets/stylesheets/leagues.scss
@@ -1,10 +1,19 @@
 .leagueJoin {
   border-style: solid;
-  border-width: 1px;
+  border-width: 2px;
+  margin-top: 5px;
   padding: 2px;
   text-align: left;
   font-size: 16px;
+  height: 10em;
+  width: 15em;
+  background-color: black;
+  background-blend-mode: saturation;
 }
+.leagueJoin a{
+  color:lightblue;
+}
+
 
 .leaderBoard {
   font-weight: bold;
@@ -32,11 +41,41 @@
   margin-top: 1px;
   border-style: solid;
   height: 10em;
-
 }
 
 .gamePick span {
-  position: absolute;
+  position:absolute;
   bottom: 0;
+  background-color: #486D30;
+  font-weight: bolder;
+  opacity: .9;
+  display: block;
+  margin-left: 6%;
   text-align: center;
+
+}
+.joinPickLink {
+  background-color: #486D30;
+  width: 25%;
+  border-style: solid;
+  border-color: black;
+  display: block;
+  margin: auto;
+  text-align: center;
+  color:black;
+  font-weight: bold;
+}
+.newLeague {
+  margin: auto;
+  width: 75%;
+  border-style: double;
+  border-width: 10px;
+  background-color: #486D30;
+  opacity: .9;
+}
+.new_league {
+  display: block;
+  margin: auto;
+  color: black;
+  font-weight: bolder;
 }
