--- a/app/views/leagues/index.html.erb
+++ b/app/views/leagues/index.html.erb
@@ -1,8 +1,12 @@
-<h2 class="welcomeHeader">Leagues Home Page</h2>
-<div class="leagueList">
-  <div class="columns small-6">
-<% @open_leagues.each do |league| %>
-<div class="leagueJoin"><%= link_to league.league_name, league_path(league) %></div>
-<% end %>
-</div>
+<div class="fieldLeagueHome">
+    <h2 class="welcomeHeader">Leagues Home Page</h2>
+  <div class="leagueList">
+    <div class="columns small-6 small-offset-3 medium-8 medium-offset-2 large-10 large-offset-1">
+      <div class="row">
+      <% @open_leagues.each do |league| %>
+      <div class="leagueJoin small-8 medium-6 large-4 columns end"><%= link_to league.league_name, league_path(league) %></div>
+      <% end %>
+    </div>
+  </div>
+  <div>
 </div>
