--- a/app/views/leagues/new.html.erb
+++ b/app/views/leagues/new.html.erb
@@ -1,27 +1,28 @@
-<h1>I am a New League Form</h1>
-<%= form_for @league do |f| %>
+<div class="fieldBackgroundForm">
+  <div class = "row">
+  <h1 class="small-6 medium-8 large-12 customLeagueHeader">Create a custom league.</h1>
+  <%= form_for @league do |f| %>
   <% if @league.errors.any? %>
-    <div id="error_explanation">
+
+    <div id="error_explanation small-6 columns">
       <h2><%= pluralize(@league.errors.count, "error") %> prohibited this League from being saved:</h2>
       <ul>
         <% @league.errors.full_messages.each do |msg| %>
-          <li><%= msg %></li>
+        <li><%= msg %></li>
         <% end %>
       </ul>
     </div>
   <% end %>
 
-  <div class="newLeague">
+  <div class="newLeague small-6 medium-8 large-12 columns">
     <p class="field">
       <%= f.label :league_name %>
       <%= f.text_area :league_name %>
     </p>
-
     <p class="field">
       <%= f.label :max_members %>
       <%= f.text_area :max_members %>
     </p>
-
     <p class="field">
       <%= f.radio_button :invite_only, 1, {id: "private-league-button"} %>
       <%= f.label :invite_only, "Create Private League" %>
@@ -29,9 +30,10 @@
       <%= f.radio_button :invite_only, 2, {id: "public-league-button"} %>
       <%= f.label :invite_only, "Create Public League" %>
     </p>
-
     <div class="field">
       <%= f.submit "Create League" %>
     </div>
   </div>
-<% end %>
+  <% end %>
+  </div>
+</div>
