--- a/app/views/leagues/show.html.erb
+++ b/app/views/leagues/show.html.erb
@@ -1,19 +1,21 @@
-<h2 class="welcomeHeader">League Homepage for <%= @league.league_name %></h1>
+<div class="fieldBackgroundShow">
+  <h2 class="welcomeHeader">League Homepage for <%= @league.league_name %></h1>
+
   <div class="leaderBoard">
     <table role="grid" class="row">
-      <thead class="row">
+      <thead class="row leaderBoardHead">
       <th class="small-1 medium-1 large-1 columns rank">Rank</th>
       <th class="small-4 medium-4 large-4 columns user">Username</th>
-      <th class="small-3 medium-3 large-3 columns weeklyScore">Weekly Score</th>
-      <th class="small-4 medium-4 large-4 columns">Season Score</th>
+      <th class="small-3 medium-3 large-3 columns seasonScore">Season Score</th>
+      <th class="small-4 medium-4 large-4 columns weeklyScore">Weekly Score</th>
     </thead>
       <tbody>
       <% @scores.each_with_index do |score, index|%>
       <tr>
         <td class="small-1 medium-1 large-1 columns rank"><%= index+1 %></td>
         <td class="small-4 medium-4 large-4 columns user"><%=score[:username]%></td>
-        <td class="small-3 medium-3 large-3 columns weeklyScore"><%=score[:score_season]%></td>
-        <td class="small-4 medium-4 large-4 columns"><%= score[:score_week] %></td>
+        <td class="small-3 medium-3 large-3 columns seasonScore"><%=score[:score_season]%></td>
+        <td class="small-4 medium-4 large-4 columns weeklyScore"><%= score[:score_week] %></td>
       </tr>
       <%end%>
     </tbody>
@@ -21,11 +23,18 @@
   </div>
 
   <% if !@members.find_by_id(current_user.id) %>
-    <%= link_to "Join this league", league_memberships_path(@league), method: :post  %>
+  <%= link_to "Join this league", league_memberships_path(@league), {method: :post,class:"joinPickLink"}  %>
+  <% else %>
+  <% if @games %>
+    <% if @picks.length ==0  %>
+    <%= link_to "Click here to pick the games!",league_picks_path(@league.id),{class:"joinPickLink"}  %>
+    <% else %>
+      <h3 id="pickLink"><%= link_to "Edit your picks here",  league_picks_path(@league.id),{class:"joinPickLink"} %></h3>
+      <% end %>
+    <%end %>
   <% end %>
   <% if @games %>
     <% if @picks.length ==0  %>
-    <h3> <%= link_to "Click here to pick the games!",league_picks_path(@league.id) %> </h3>
       <h2 class="gameHead">Games for Week <%= @current_week.week_number %></h2>
       <div class="row">
           <% @games.each do |game| %>
@@ -37,8 +46,8 @@
             <% if home == "49ers" %>
           <% home = "Niners" %>
           <% end %>
-            <div class="small-6 medium-4 large-3 columns game end">
-              <div class="gameTeam" id=<%="#{away}"%>></div> AT <div class="gameTeam" id=<%="#{home}"%>></div>
+            <div class="small-6 small-offset-3 medium-4 medium-offset-4 large-3 large-offset-0 columns game end">
+              <div class="gameTeam" id=<%="#{away}"%>></div>AT<br><div class="gameTeam" id=<%="#{home}"%>></div>
             </div>
           <% end %>
       </div>
@@ -46,7 +55,6 @@
     <% else %>
     <div>
     <h2 class="gameHead">Your picks for the week </h2>
-    <h3><%= link_to "Edit your picks here",  league_picks_path(@league.id) %></h3>
     <div class="row">
       <% @picks.each do |pick| %>
         <% name =Team.find_by_id(pick[:winning_team]).team_name%>
@@ -70,3 +78,4 @@
     <p> No Games Scheduled </p>
   </div>
   <% end %>
+</div>
