--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,13 +1,23 @@
+<div class="fieldBackgroundHome">
 <% if current_user %>
 <h2 class="welcomeHeader">Welcome <%=current_user.first_name%></h2>
-    <% @memberships.each do |membership| %>
-    <div class="row small-6 small-offset-3 medium-8 medium-offset-2 large-10 columns large-offset-2 leagueLink">
-    <span class="columns small-6 medium-6 large-6"> <%=link_to "#{ membership.league.league_name}", league_path(membership.league)%></span>
-      <span class="columns small-3  weeklyScore"><%="Score for week #{Week.current_week.week_number}: "%>
-      <%= Membership.weekly_score(membership.user_id, membership.league_id,Week.current_week) %></span>
-       <span class="columns small-3 yearToDateScore"><%= "Score for #{Week.current_week.year}: #{membership.score}" %></span>
-    </div>
-    <% end %>
+  <table role="grid" class="row leagueBoard">
+    <thead class="row leagueBoard">
+    <th class="small-6 medium-6 large-6 columns rank">League Name</th>
+    <th class="small-3 medium-3 large-3 columns">Season Score</th>
+    <th class="small-3 medium-3 large-3 columns weeklyScore">Weekly Score</th>
+  </thead>
+    <tbody class="leagueBoard">
+    <% @scores.each do |score|%>
+    <tr>
+      <td class="small-6 medium-6 large-6 columns rank"><%= link_to League.find_by_id(score[:league]).league_name, league_path(score[:league]) %></td>
+      <td class="small-3 medium-3 large-3 columns weeklyScore"><%=score[:year]%></td>
+      <td class="small-3 medium-3 large-3 columns"><%= score[:week] %></td>
+    </tr>
+    <%end%>
+  </tbody>
+  </table>
+
     <div class="row">
       <div class="leagueLinks small-6 small-offset-3 medium-8 medium-offset-2 large-10 columns large-offset-2 ">
         <div class="publicLink"><%= link_to "Click here to see available leagues!", leagues_path%></div>
@@ -26,3 +36,4 @@
 </div>
 
 <% end %>
+</div>
