--- a/app/assets/stylesheets/field.scss
+++ b/app/assets/stylesheets/field.scss
@@ -7,6 +7,10 @@
 .fieldBackgroundHome {
   background: image-url("field.jpg");
   background-size: cover;
+  repeat:repeat;
+  overflow: hidden;
+  height: 100%;
+
 
 }
 
