edited league header

--- a/app/views/leagues/index.html.erb
+++ b/app/views/leagues/index.html.erb
@@ -1,5 +1,5 @@
 <div class="fieldLeagueHome">
-    <h2 class="welcomeHeader">Leagues Home Page</h2>
+    <h2 class="welcomeHeader">Available Leagues</h2>
   <div class="leagueList">
     <div class="columns small-6 small-offset-3 medium-8 medium-offset-2 large-10 large-offset-1">
       <div class="row">
