fixed some issues for smaller screens

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -30,8 +30,9 @@
   <p class = "small-8 small-offset-2 large-10  columns introBlub">
     Each week you pick the winners of all games on the NFL schedule.<br> You'll then assign a confidence score to each game.<br>
     Pick the winner correctly, gain that many points.<br> Otherwise you lose that many points.
-    <br><br>
-    Register and join or create a league to get started!
+    <br>
+    <button class="signInUp"><%= link_to 'Sign Up', new_user_registration_path %></button>
+    <button class="signInUp"><%= link_to 'Sign In', new_user_session_path %></button>
   </p>
 </div>
 
