--- a/app/views/leagues/show.html.erb
+++ b/app/views/leagues/show.html.erb
@@ -47,6 +47,7 @@
           <% home = "Niners" %>
           <% end %>
             <div class="small-6 small-offset-3 medium-4 medium-offset-4 large-3 large-offset-0 columns game end">
+              <span> <%=game.gametime.strftime('%a, %B %e at %l%M%p')%> </span>
               <div class="gameTeam" id=<%="#{away}"%>></div>AT<br><div class="gameTeam" id=<%="#{home}"%>></div>
             </div>
           <% end %>
