--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,9 +15,13 @@
  *= require foundation_and_overrides
 
  */
+body {
+  min-height: 100%;
+  background: image-url("field.jpg");
+  background-size: cover;
+}
 a {
   font-size: 24px;
-
 }
 
 h1 {
