--- a/app/views/leagues/show.html.erb
+++ b/app/views/leagues/show.html.erb
@@ -13,7 +13,7 @@
       <% @scores.each_with_index do |score, index|%>
       <tr>
         <td class="small-1 medium-1 large-1 columns rank"><%= index+1 %></td>
-        <td class="small-4 medium-4 large-4 columns user"><%=score[:username]%></td>
+        <td class="small-4 medium-4 large-4 columns user"><%=link_to "#{score[:username]}",membership_path(score[:member_id])%></td>
         <td class="small-3 medium-3 large-3 columns seasonScore"><%=score[:score_season]%></td>
         <td class="small-4 medium-4 large-4 columns weeklyScore"><%= score[:score_week] %></td>
       </tr>
